tot en met de jokes

--- a/src/main/resources/templates/apicalls.html
+++ b/src/main/resources/templates/apicalls.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="apicalls.js"></script>
+<script src="../static/js/apicalls.js"></script>
 </body>
 </html>
