--- a/src/main/resources/templates/change_details.html
+++ b/src/main/resources/templates/change_details.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" th="xmlns:https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Change User Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+<div th:include="header :: headerFragment"></div>
 <body>
 
 <form th:action="@{/change_details/update}" method="post" style="max-width: 750px; margin: 0 auto"
@@ -43,20 +38,7 @@
     <p>Back to <a th:href="@{/home}">Home Page</a></p>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-<script>
-    function checkPasswords() {
-        if (document.getElementById('confirm').value !== document.getElementById('password').value) {
-            document.getElementById("confirm").setCustomValidity("Passwords do not match!");
-        } else {
-            document.getElementById("confirm").setCustomValidity("");
-        }
-    }
-</script>
+<div th:include="footer :: footerFragment"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
