--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <title>Login - Favorites App</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous" />
-</head>
+<div th:include="header :: headerFragment"></div>
 <body>
+
+
 <div class="container-fluid text-center">
 
 
@@ -27,17 +22,23 @@
     <div class="border border-secondary p-3 rounded">
 
       <p>
-        <input type="email" name="email" class="form-control" placeholder="E-mail" required autofocus/>
+        <label for="email">Email:</label>
+        <br>
+        <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required autofocus/>
       </p>
       <p>
-        <input type="password" name="password" class="form-control" placeholder="Password" required />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required />
       </p>
       <p>
         <input type="submit" value="Login" class="btn btn-primary" />
       </p>
     </div>
   </form>
-  <h4><a th:href="@{/register}">Click here to Sign Up</a></h4>
+  <br>
+  <br>
+  <h4>Click <a th:href="@{/register}">here</a> to Sign Up</h4>
+  <div th:include="footer :: footerFragment"></div>
 </div>
 </body>
 </html>
