--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="ISO-8859-1">
-    <title>Sign Up</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+<div th:include="header :: headerFragment"></div>
 <body>
 <div class="container text-center">
     <div>
@@ -29,14 +24,14 @@
             <div class="form-group row">
                 <div class="text-center">
                     <label for="password">Password: </label><input placeholder="Password" type="password" th:field="*{password}" class="form-control"
-                           required minlength="5" maxlength="20" id="password"/>
+                           required minlength="5" maxlength="20" id="password" oninput="checkPasswords()"/>
                 </div>
             </div>
             <br>
             <div class="form-group row">
                 <div class="text-center">
-                    <label for="confirm">Confirm password: </label><input id="confirm" placeholder="Confirm Password" type="password" th:field="*{retypePassword}" class="form-control"
-                           required minlength="5" maxlength="20"/>
+                    <label for="confirm">Confirm password: </label><input id="confirm" placeholder="Confirm Password" type="password" class="form-control"
+                           required minlength="5" maxlength="20" oninput="checkPasswords()"/>
                 </div>
             </div>
         </div>
@@ -50,11 +45,7 @@
         <a th:href="@{/login}">Go to login page</a>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+<div th:include="footer :: footerFragment"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
