--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,13 +30,16 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/movies-tv}">Movies & TV</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link active" aria-current="page" th:href="@{/movie-tv-roles}">Movie & TV Roles</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/actors}">Actors</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link active" aria-current="page" th:href="@{/quotes}">Quotes</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link active" aria-current="page" th:href="@{/jokes}">Jokes</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link active" aria-current="page" th:href="@{/countries}">Countries</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link active" aria-current="page" th:href="@{/lists}">Lists</a>
