--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,18 +8,22 @@
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
               crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
+        <style>
+            .collapse.navbar-collapse li a {
+                color: black;
+            }
+        </style>
     </head>
     <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md" style="background-color: #42d1f5; color: black">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/home}">Favorites</a>
+            <a class="navbar-brand" th:href="@{/home}"><img width="37px" th:src="@{images/logo.png}"/></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
                     </li>
@@ -27,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/books}">Books</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link active" aria-current="page" th:href="@{/movies-tv}">Movies & TV</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/movies}">Movies</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link active" aria-current="page" th:href="@{/actors}">Actors</a>
@@ -42,7 +46,7 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/countries}">Countries</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link active" aria-current="page" th:href="@{/lists}">Lists</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/users}">Users</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
