--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,11 +5,11 @@
 <div class="container-fluid">
     <br>
     <br>
-    <h2 class="text-center">Search and add your favorite movies</h2>
+    <h2 class="text-center">Search and add your favorite books</h2>
     <br>
     <table class="table table-striped table-responsive text-center">
         <div class="text-center">
-            <form th:action="@{/movies}">
+            <form th:action="@{/books}">
                 <input type="text" name="keyword" id="keyword" size="30" th:value="${keyword}" required/>
                 &nbsp; <input type="submit" value="Search"/>
                 &nbsp;
@@ -19,22 +19,22 @@
 
     <div class="table-responsive">
         <table th:if="${keyword != null}" class="table table-striped text-center align-middle">
-            <thead th:if="${!filteredMovies.empty}">
-            <th class="text-start" style="font-size: large">Select Your Favorite Movie</th>
-            <th>Year</th>
+            <thead th:if="${not filteredBooks.empty}">
+            <th class="text-start" style="font-size: large">Select Your Favorite Book</th>
+            <th>Author</th>
             <th>Add to Favorites</th>
             </thead>
             <tbody>
-            <tr th:if="${filteredMovies.empty} or ${filteredMovies == null}">
-                <td th:if="${filteredMovies} == null" colspan="3"> Please enter a more precise query</td>
+            <tr th:if="${filteredBooks.empty} or ${filteredBooks == null}">
+                <td th:if="${filteredBooks} == null" colspan="3"> Please enter a more precise query</td>
             </tr>
-            <tr th:each="m : ${filteredMovies}">
-                <td class="text-start"><span th:text="${m.title}"> </span></td>
-                <td><span th:text="${m.year}"> </span></td>
+            <tr th:each="book : ${filteredBooks}">
+                <td class="text-start"><span th:text="${book.title}"> </span></td>
+                <td><span th:text="${book.author}"> </span></td>
                 <td>
-                    <form action="#" th:action="@{/movies}" method="post">
-                        <input hidden type="text" name="title" th:value="${m.title}">
-                        <input hidden type="text" name="year" th:value="${m.year}">
+                    <form action="#" th:action="@{/books}" method="post">
+                        <input hidden type="text" name="title" th:value="${book.title}">
+                        <input hidden type="text" name="author" th:value="${book.author}">
                         <button type="submit" style="color:darkblue; font-size: x-large; background-color: transparent">
                             Add
                         </button>
@@ -44,27 +44,26 @@
             </tbody>
         </table>
     </div>
-    <br>
-    <br>
-    <div th:if="${!userMovies.empty}">
-        <table class="table table-striped text-center">
+
+    <div class="table-responsive" th:if="${!userBooks.empty}">
+        <table class="table table-striped table-responsive text-center align-middle">
             <thead>
             <tr>
-                <th class="text-start" style="font-size: large">Favorite Movies</th>
-                <th class="text-start">Year</th>
+                <th class="text-start" style="font-size: large">Favorite Books</th>
+                <th>Author</th>
                 <th>Delete</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${userMovies.empty}">
-                <td colspan="3"> No Movies Available</td>
+            <tr th:if="${userBooks.empty}">
+                <td colspan="3"> No Books Available</td>
             </tr>
-            <tr th:each="movie : ${userMovies}">
-                <td class="text-start"><span th:text="${movie.title}"> Title </span></td>
-                <td class="text-start"><span th:text="${movie.year}"> Year </span></td>
+            <tr th:each="book : ${userBooks}">
+                <td class="text-start"><span th:text="${book.title}"> Title </span></td>
+                <td><span th:text="${book.author}"> Year </span></td>
                 <td>
-                    <form th:action="@{/deleteMovie}" method="post">
-                        <input type="hidden" name="id" th:value="${movie.id}"/>
+                    <form th:action="@{/deleteBook}" method="post">
+                        <input type="hidden" name="id" th:value="${book.id}"/>
                         <button style="font-size: small; background-color: black; color: white; font-weight: bold"
                                 name="id"
                                 type="submit">X
