--- a/src/main/resources/templates/countries.html
+++ b/src/main/resources/templates/countries.html
@@ -5,12 +5,13 @@
 <div class="container-fluid">
     <br>
     <br>
+    <h2 class="text-center">Search and add your favorite countries</h2>
+    <br>
 
-    <table class="table table-striped table-responsive text-center" id="countriesTable">
+    <table class="table table-striped table-responsive text-center">
         <div class="text-center">
             <form th:action="@{/countries}">
-                <input type="text" name="keyword" id="keyword" size="30" th:value="${keyword}"
-                       required/>
+                <input type="text" name="keyword" id="keyword" size="30" th:value="${keyword}" required/>
                 &nbsp;
                 <input type="submit" value="Search"/>
                 &nbsp;
@@ -18,13 +19,13 @@
         </div>
     </table>
 
-    <table th:if="${filteredCountries != null} and ${keyword != null} and !${filteredCountries.empty}" class="table table-striped text-center">
+    <table th:if="${filteredCountries != null} and ${keyword != null} and ${!filteredCountries.empty}" class="table table-striped text-center">
         <thead>
         <th class="text-start" style="font-size: large">Select Your Favorite Country</th>
         <th>Add to Favorites</th>
         </thead>
         <tbody>
-        <tr th:if="${filteredCountries} != empty" th:each="c : ${filteredCountries}">
+        <tr th:if="${!filteredCountries.empty}" th:each="c : ${filteredCountries}">
             <td class="text-start"><span th:text="${c.name}"> </span></td>
             <form action="#" th:action="@{/countries}" method="post">
                 <input hidden type="text" name="name" th:value="${c.name}">
@@ -38,7 +39,7 @@
         </tbody>
     </table>
 
-    <table class="table table-striped table-responsive text-center">
+    <table class="table table-striped table-responsive text-center" th:if="${!userCountries.empty}">
         <thead>
         <tr>
             <th class="text-start" style="font-size: large">Favorite Countries</th>
@@ -46,9 +47,6 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:if="${userCountries.empty}">
-            <td colspan="2"> No Countries Available</td>
-        </tr>
         <tr th:each="country : ${userCountries}">
             <td class="text-start"><span th:text="${country.name}"> Title </span></td>
             <td>
