--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,16 +3,18 @@
 <div th:include="header :: headerFragment"></div>
 <body>
 <div class="container text-center">
-
-
+    <br>
+    <br>
     <div>
         <h1>Welcome [[${#request.userPrincipal.principal.name}]]!</h1>
     </div>
     <p style="font-size: small">Click <a th:href="@{/change_details}">here</a> to change your user details.</p>
-    <br>
+    <br><br><br>
     <div>
-
+        <h2>Register your favorite stuff!</h2>
     </div>
+    <br><br>
+    <p style="font-size: 26px">Hi! This is a practice project made by Java Spring Boot and Thymeleaf. It lets your register your favorite books, movies, actors, quotes, jokes and countries. To make it a bit more fun I decided to let you generate random quotes and jokes. Please note that not all actors are included in this app. You can query between 500 actors. For the books, movies and countries the choice is quite large. Enjoy this app and share it with your friends!</p>
 </div>
 <div th:include="footer :: footerFragment"></div>
 </body>
