--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,9 +3,11 @@
 <div th:include="header :: headerFragment"></div>
 <body>
 <div class="container text-center">
+    <br>
+    <br>
     <h1>Something went wrong!</h1>
-    <h2>Please try again or contact me if it is a structural problem.</h2>
+    <h2>Please try again. You can also contact me if there is a structural problem.</h2>
 </div>
 <div th:include="footer :: footerFragment"></div>
 </body>
-</html>l>
+</html>
