--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,10 +4,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <title th:text="${pageTitle}">Favorites App</title>
+        <link rel="icon" type="image/ico" th:href="@{../static/favicon.ico}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
               crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css">
         <style>
             .collapse.navbar-collapse li a {
                 color: black;
@@ -17,7 +17,7 @@
     <body>
     <nav class="navbar navbar-expand-md" style="background-color: #42d1f5; color: black">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/home}"><img width="37px" th:src="@{images/logo.png}"/></a>
+            <a class="navbar-brand" th:href="@{/home}" style="font-family: 'Brush Script MT', Helvetica, Arial; color: darkblue; font-weight: bolder">Favorites</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
