--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -2,47 +2,47 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:include="header :: headerFragment"></div>
 <body>
-<div class="container-fluid">
+<div class="container text-center">
     <br>
     <br>
     <h2 class="text-center">Search and add your favorite movies</h2>
     <br>
-    <table class="table table-striped table-responsive text-center">
-        <div class="text-center">
-            <form th:action="@{/movies}">
-                <input type="text" name="keyword" id="keyword" size="30" th:value="${keyword}" required/>
-                &nbsp; <input type="submit" value="Search"/>
-                &nbsp;
-            </form>
-        </div>
-    </table>
+    <div class="text-center">
+        <form th:action="@{/movies}">
+            <input type="text" name="keyword" id="keyword" size="30" th:value="${keyword}" required/>
+            &nbsp; <input class="btn btn-sm btn-primary" type="submit" value="Search"/>
+            &nbsp;
+        </form>
+    </div>
 
-    <div class="table-responsive">
-        <table th:if="${keyword != null}" class="table table-striped text-center align-middle">
-            <thead th:if="${!filteredMovies.empty}">
-            <th class="text-start" style="font-size: large">Select Your Favorite Movie</th>
-            <th>Year</th>
-            <th>Add to Favorites</th>
-            </thead>
-            <tbody>
-            <tr th:if="${filteredMovies.empty} or ${filteredMovies == null}">
-                <td th:if="${filteredMovies} == null" colspan="3"> Please enter a more precise query</td>
-            </tr>
-            <tr th:each="m : ${filteredMovies}">
-                <td class="text-start"><span th:text="${m.title}"> </span></td>
-                <td><span th:text="${m.year}"> </span></td>
-                <td>
-                    <form action="#" th:action="@{/movies}" method="post">
-                        <input hidden type="text" name="title" th:value="${m.title}">
-                        <input hidden type="text" name="year" th:value="${m.year}">
-                        <button type="submit" style="color:darkblue; font-size: x-large; background-color: transparent">
-                            Add
-                        </button>
-                    </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div th:if="${filteredMovies != null}">
+        <p class="text-center" th:if="${filteredMovies.empty} and ${keyword != null}"><br> No movies could be found. Please
+            be more precise in your query.</p>
+        <div class="table-responsive" th:if="${not filteredMovies.empty}">
+            <table th:if="${keyword != null}" class="table table-striped text-center align-middle">
+                <thead th:if="${not filteredMovies.empty}">
+                <th class="text-start" style="font-size: large">Select Your Favorite Movie</th>
+                <th>Year</th>
+                <th>Add to Favorites</th>
+                </thead>
+                <tbody>
+                <tr th:each="m : ${filteredMovies}">
+                    <td class="text-start"><span th:text="${m.title}"> </span></td>
+                    <td><span th:text="${m.year}"> </span></td>
+                    <td>
+                        <form action="#" th:action="@{/movies}" method="post">
+                            <input hidden type="text" name="title" th:value="${m.title}">
+                            <input hidden type="text" name="year" th:value="${m.year}">
+                            <button type="submit"
+                                    style="color:darkblue; font-size: x-large; background-color: transparent">
+                                Add
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <br>
     <br>
@@ -52,7 +52,7 @@
             <tr>
                 <th class="text-start" style="font-size: large">Favorite Movies</th>
                 <th class="text-start">Year</th>
-                <th>Delete</th>
+                <th class="text-start">Delete</th>
             </tr>
             </thead>
             <tbody>
@@ -62,7 +62,7 @@
             <tr th:each="movie : ${userMovies}">
                 <td class="text-start"><span th:text="${movie.title}"> Title </span></td>
                 <td class="text-start"><span th:text="${movie.year}"> Year </span></td>
-                <td>
+                <td class="text-start">
                     <form th:action="@{/deleteMovie}" method="post">
                         <input type="hidden" name="id" th:value="${movie.id}"/>
                         <button style="font-size: small; background-color: black; color: white; font-weight: bold"
