--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
     </div>
     <br><br>
     <p style="font-size: 26px">
-        Hi! This is a practice project made by Java Spring Boot and Thymeleaf. It lets your register your favorite books,
+        Hi! This is a practice project made by Java Spring Boot and Thymeleaf. You can register your favorite books,
         movies, actors, quotes, jokes and countries. To make it a bit more fun I decided to let you generate random quotes
         and jokes. Please note that not all actors are included in this app. You can query between 500 actors. For the books,
         movies and countries the choice is much greater. Enjoy this app and share it with your friends!
