--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,11 +15,10 @@
         </style>
     </head>
     <body>
-    <nav class="navbar navbar-expand-md" style="background-color: #42d1f5; color: black">
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #42d1f5; color: black">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{/home}" style="font-family: 'Brush Script MT', Helvetica, Arial; color: darkblue; font-weight: bolder">Favorites</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
