--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -46,6 +46,6 @@
     </div>
 </div>
 <div th:include="footer :: footerFragment"></div>
-<script src="js/main.js"></script>
+<script src="js/checkPasswords.js"></script>
 </body>
 </html>
