--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <body>
 
 
-<div class="container-fluid text-center">
+<div class="container text-center">
 
 
   <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
